fix rotation bug on ios

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -466,6 +466,14 @@ h1, h2, h3, h4
 /* Unique Styles */
 #chefsteps-logo
   height: 46px
+
+.signup-box
+  overflow: hidden
+  .input-signup-email
+    border: none
+    border-radius: 0px
+    width: 100%
+    @include boxsizing
   
 .logo-wrapper
   $width: 7px
